--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -1,32 +1,30 @@
-# vim:fileencoding=utf-8:ft=conf
+############################ Bazileros Kitty config #####################################################
+#########################################################################################################
 
-# Font family. You can also specify different fonts for the
-# bold/italic/bold-italic variants. By default they are derived automatically,
-# by the OSes font system. Setting them manually is useful for font families
-# that have many weight variants like Book, Medium, Thick, etc. For example:
-# font_family Operator Mono Book
-# bold_font Operator Mono Thick
-# bold_italic_font Operator Mono Medium
-# font_family      Input Mono
-font_family      FiraCode Nerd Font Mono # JetBrainsMono Nerd Font Bold 
-italic_font      auto
-bold_font        auto
-bold_italic_font auto
+#          FONT FAMILY
+font_family         JetBrainsMono Nerd Font
+italic_font         Auto
+bold_font           Auto
+bold_italic_font    Auto
 
-# Font size (in pts)
-font_size        14.0
+#          FONT SIZE (in pts)
+font_size        18.0
+font_ligatures   calt, ss01
 
-# The foreground color
-foreground       #c0b18b
+# The Foreground color
+foreground       #C4A7E7
 
-# The background color
-background      #282C34
-# background_opacity 0.9
+# The Background color
+background       #191724
+
 # The foreground for selections
-selection_foreground #2f2f2f
+ selection_foreground  #9ED24A
+
+# The background opacity as in transpirancy
+# background_opacity    0.6
 
 # The background for selections
-selection_background #d75f5f
+selection_background #D75F5F
 
 # The cursor color
 cursor           #8fee96
@@ -96,7 +94,7 @@ input_delay 3
 visual_bell_duration 0.0
 
 # Enable/disable the audio bell. Useful in environments that require silence.
-enable_audio_bell yes
+enable_audio_bell no
 
 # The modifier keys to press when clicking with the mouse on URLs to open the URL
 open_url_modifiers ctrl+shift
@@ -118,6 +116,7 @@ active_border_color #ffffff
 
 # The color for the border of inactive windows
 inactive_border_color #cccccc
+
 
 # Tab-bar colors
 active_tab_foreground #000
@@ -168,10 +167,10 @@ color15  #d8d8d8
 # assigned in the default configuration.
 
 # Clipboard
-map ctrl+v             paste_from_clipboard
-map ctrl+shift+s        paste_from_selection
-map super+c             copy_to_clipboard
-map shift+insert        paste_from_selection
+map ctrl+v               paste_from_clipboard
+map ctrl+shift+s         paste_from_selection
+map ctrl+shift+c         copy_to_clipboard
+map shift+insert         paste_from_selection
 
 # Scrolling
 map ctrl+shift+up        scroll_line_up
@@ -241,3 +240,4 @@ macos_option_as_alt no
 macos_titlebar_color background
 
 allow_remote_control yes
+
