--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -6,28 +6,29 @@ font_family         JetBrainsMono Nerd Font
 italic_font         Auto
 bold_font           Auto
 bold_italic_font    Auto
+theme               NeoSolarized.conf
 
 #          FONT SIZE (in pts)
 font_size        18.0
 font_ligatures   calt, ss01
 
 # The Foreground color
-foreground       #C4A7E7
+foreground       #708183
 
-# The Background color
-background       #191724
+# The Background color 191724
+background       #001217
 
 # The foreground for selections
- selection_foreground  #9ED24A
+ selection_foreground  #D75F5F
 
 # The background opacity as in transpirancy
 # background_opacity    0.6
 
 # The background for selections
-selection_background #D75F5F
+selection_background #fcf4dc
 
 # The cursor color
-cursor           #8fee96
+cursor           #708183
 
 # The cursor shape can be one of (block, beam, underline)
 shell_integration no-cursor
@@ -119,46 +120,46 @@ inactive_border_color #cccccc
 
 
 # Tab-bar colors
-active_tab_foreground #000
-active_tab_background #eee
-inactive_tab_foreground #444
-inactive_tab_background #999
-
+active_tab_foreground #181926
+active_tab_background #268bd2
+inactive_tab_foreground #CAD3F5
+inactive_tab_background #586e75
+tab_bar_background      #073642
 
 # The 16 terminal colors. There are 8 basic colors, each color has a dull and
 # bright version.
 
 # black
-color0   #2f2f2f
-color8   #656565
+color0   #002b36
+color8   #708183
 
 # red
-color1   #d75f5f
-color9   #d75f5f
+color1   #dc322f
+color9   #cb4b16
 
 # green
-color2    #d4d232
-color10   #8fee96
+color2    #859000
+color10   #001217
 
 # yellow
-color3    #af865a
-color11   #cd950c
+color3    #b58900
+color11   #52676f
 
 # blue
-color4   #22c3a1
-color12  #22c3a1
+color4   #268bd2
+color12  #859000
 
 # magenta
-color5   #775759
-color13  #775759
+color5   #d33682
+color13  #6c71c4
 
 # cyan
-color6   #84edb9
-color14  #84edb9
+color6   #2aa198
+color14  #81908f
 
 # white
-color7   #c0b18b
-color15  #d8d8d8
+color7   #e9e2cb
+color15  #fcf4dc
 
 # Key mapping
 # For a list of key names, see: http://www.glfw.org/docs/latest/group__keys.html
